@@ -21,9 +21,11 @@ subprojects {
 
     repositories {
         mavenCentral()
+        gradlePluginPortal()
     }
 
     dependencies {
+        implementation      'gradle.plugin.com.github.johnrengelman:shadow:7.1.2'
         implementation      'javax.annotation:javax.annotation-api:1.3.2'
         implementation      'org.apache.logging.log4j:log4j-api:2.20.0'
         implementation      'org.apache.logging.log4j:log4j-core:2.20.0'
@@ -35,6 +37,7 @@ subprojects {
 
     test {
         useTestNG()
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
     }
 
     configurations {
